--- a/LIA2/app/src/main/res/values/colors.xml
+++ b/LIA2/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#ff6a00</color>
     <color name="colorPrimaryDark">#ac2500</color>
     <color name="colorAccent">#ffffff</color>
-    <color name="background">#ffffff</color>
+    <color name="background">#fff</color>
     <color name="buttonColor">#D50000</color>
 </resources>
