--- a/LIA2/app/src/main/res/layout/activity_voorzieningen.xml
+++ b/LIA2/app/src/main/res/layout/activity_voorzieningen.xml
@@ -25,7 +25,7 @@
                     android:id="@+id/imageView8"
                     android:layout_width="139dp"
                     android:layout_height="89dp"
-                    app:srcCompat="@drawable/rozekoek" />
+                    app:srcCompat="@drawable/sleutels" />
 
                 <CheckBox
                     android:id="@+id/checkBox7"
@@ -33,7 +33,7 @@
                     android:layout_height="match_parent"
                     android:checked="false"
                     android:gravity="center"
-                    android:text="Roze Koek" />
+                    android:text="Sleutels" />
             </TableRow>
 
             <TableRow
